fixed the alignment of the span element

--- a/src/mapml.css
+++ b/src/mapml.css
@@ -634,10 +634,6 @@ button.mapml-button:disabled,
   justify-content: center;
 }
 
-.mapml-layer-item-properties label {
-  text-indent: 5px;
-}
-
 
 .mapml-layer-item-remove-control,
 .mapml-layer-item-settings-control {
@@ -648,7 +644,13 @@ button.mapml-button:disabled,
 }
 
 .mapml-layer-item-toggle{
+  display: inline-flex !important;
   width: 100%;
+}
+
+.mapml-layer-item-name {
+  word-break: break-word;
+  text-align: left;
 }
 
 .mapml-layer-item-settings > * {
